Completed the process of splitting up and reorganizing components and fragments in templates (fixes #74).

--- a/twobuntu/articles/templates/articles/search.html
+++ b/twobuntu/articles/templates/articles/search.html
@@ -3,5 +3,5 @@
 {% block content %}
     <h2>Search Results for "{{ request.GET.q }}"</h2>
     <hr>
-    {% include "articles/list.html" %}
+    {% include "articles/fragments/articles.html" %}
 {% endblock %}
