--- a/twobuntu/accounts/templates/accounts/profile.html
+++ b/twobuntu/accounts/templates/accounts/profile.html
@@ -21,32 +21,26 @@
                         {% if profile.website %}
                             <tr>
                                 <th>Website:</th>
-                                <td>
-                                    <a href="{{ profile.website }}">{{ profile.website }}</a>
-                                </td>
+                                <td><a href="{{ profile.website }}">{{ profile.website }}</a></td>
                             </tr>
                         {% endif %}
                         {% if profile.location %}
                             <tr>
                                 <th>Location:</th>
-                                <td>
-                                    {{ profile.location }}
-                                </td>
+                                <td>{{ profile.location }}</td>
                             </tr>
                         {% endif %}
                         {% if profile.birthday %}
                             <tr>
                                 <th>Age:</th>
-                                <td>
-                                    {{ profile.age }}
-                                </td>
+                                <td>{{ profile.age }}</td>
                             </tr>
                         {% endif %}
                     </table>
                 </div>
             </div>
             <hr>
-            {% include "articles/list.html" %}
+            {% include "articles/fragments/articles.html" %}
         </div>
         <div class="col-sm-4">
             {% if user.is_staff or user == profile.user %}
