Further enhancements to the 404 page.

--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -3,10 +3,19 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block content %}
+    <h2>Whoops!</h2>
     <div class="row">
         <div class="col-md-8">
-            <h2>Whoops!</h2>
-            <p>That page does not exist.</p>
+            <p>
+                That page does not exist.
+                It is possible that the page you are looking for may have been moved to a new location.
+                It is also possible that you followed a link that contained a typo.
+            </p>
+            <p>
+                Please use the search form to help find the page you were looking for.
+                In the meantime, here is a cute picture of a kitten.
+            </p>
+            <br>
             <img src="http://placekitten.com/400/300" />
         </div>
         <div class="col-md-4">
