--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -11,10 +11,8 @@
                 It is possible that the page you are looking for may have been moved to a new location.
                 It is also possible that you followed a link that contained a typo.
             </p>
-            <p>
-                Please use the search form to help find the page you were looking for.
-                In the meantime, here is a cute picture of a kitten.
-            </p>
+            <p>Please use the search form to help find the page you were looking for.</p>
+            <p>In the meantime, here is a cute picture of a kitten.</p>
             <br>
             <img src="http://placekitten.com/400/300" />
         </div>
