--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -6,12 +6,12 @@
     <div class="row">
         <div class="col-lg-8">
             {% with form.title as field %}
-                {% include "field.html" %}
+                {% include "components/field.html" %}
             {% endwith %}
         </div>
         <div class="col-lg-4">
             {% with form.category as field %}
-                {% include "field.html" %}
+                {% include "components/field.html" %}
             {% endwith %}
         </div>
     </div>
