--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -31,8 +31,8 @@
                 {{ article }}
                 <br>
                 <small>
-                    {{ article.date|timesince }}
-                    ago by
+                    <span class="timeago" title="{{ article.date|date:"c" }}">{{ article.date|date:"DATETIME_FORMAT" }}</span>
+                    by
                     <a href="{{ article.author.profile.get_absolute_url }}">{{ article.author.profile }}</a>
                 </small>
             </h2>
