Added links to Android and Ubuntu Touch app.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -104,6 +104,8 @@
             {% include "articles/fragments/share.html" %}
             <br>
             {% include "articles/fragments/related.html" %}
+            <br>
+            {% include "articles/fragments/apps.html" %}
         </div>
     </div>
 {% endblock %}
