Renamed instances of 'components' to 'fragments' for consistency.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -99,7 +99,7 @@
                     </a>
                 </div>
             {% endif %}
-            {% include "components/search.html" %}
+            {% include "fragments/search.html" %}
             <br>
             {% include "articles/fragments/share.html" %}
             <br>
