--- a/twobuntu/categories/templates/categories/view.html
+++ b/twobuntu/categories/templates/categories/view.html
@@ -8,7 +8,7 @@
             {% include "articles/fragments/articles.html" %}
         </div>
         <div class="col-sm-4">
-            {% include "components/search.html" %}
+            {% include "fragments/search.html" %}
             <br>
             <div class="well">
                 <a href="{% url "categories:rss" category.id %}">
