--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -17,7 +17,7 @@
             <img src="http://placekitten.com/400/300" />
         </div>
         <div class="col-md-4">
-            {% include "components/search.html" %}
+            {% include "fragments/search.html" %}
         </div>
     </div>
 {% endblock %}
