--- a/twobuntu/templates/form.html
+++ b/twobuntu/templates/form.html
@@ -19,7 +19,7 @@
                         <div class="alert alert-danger">{{ error }}</div>
                     {% endfor %}
                     {% for field in form %}
-                        {% include "components/field.html" %}
+                        {% include "fragments/field.html" %}
                     {% endfor %}
                 </div>
             </div>
