--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -40,7 +40,7 @@
 
         </div>
         <div class="col-sm-4">
-            {% include "components/search.html" %}
+            {% include "fragments/search.html" %}
             <br>
             {% include "news/fragments/items.html" %}
             <div class="well">
