Ensured that article objects were evaluated to obtain their title instead of accessing the title attribute directly.

--- a/twobuntu/articles/templates/articles/fragments/featured.html
+++ b/twobuntu/articles/templates/articles/fragments/featured.html
@@ -1,7 +1,7 @@
 {% if articles %}
     <div class="jumbotron">
         <h1 class="truncate">
-            {{ articles.0.title }}<br>
+            {{ articles.0 }}<br>
             <small>
                 by {{ articles.0.author.profile }}
             </small>
