Another couple of title corrections.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="{{ request.build_absolute_uri }}">
     <meta property="og:description" content="{{ rendered|striptags|truncatewords:20 }}">
     <meta property="article:publisher" content="https://www.facebook.com/pages/2buntucom/129981420418132">
-    <meta property="article:section" content="{{ article.category.name }}">
+    <meta property="article:section" content="{{ article.category }}">
     <meta property="article:published_time" content="{{ article.date|date:"c" }}">
     <!-- Twitter Summary Card metadata -->
     <meta property="twitter:card" content="summary">
