--- a/twobuntu/articles/templates/articles/fragments/article.html
+++ b/twobuntu/articles/templates/articles/fragments/article.html
@@ -1,7 +1,7 @@
 {% load gravatar %}
 
 <h4 class="truncate">
-    <a href="{{ article.get_absolute_url }}" title="{{ article.title }}">{{ article }}</a><br>
+    <a href="{{ article.get_absolute_url }}" title="{{ article }}">{{ article }}</a><br>
     <small>
         <span class="timeago" title="{{ article.date|date:"c" }}">{{ article.date|date:"DATETIME_FORMAT" }}</span>
         by
