Corrected the position of the Return to Home Page link in the admin.

--- a/twobuntu/templates/admin/base_site.html
+++ b/twobuntu/templates/admin/base_site.html
@@ -12,8 +12,5 @@
 
 {% block branding %}
     <h1 id="site-name">2buntu Administration</h1>
-{% endblock %}
-
-{% block nav-global %}
-    <a href="{% url "home" %}" class="home">Return to Home Page</a>
+    <a href="{% url "home" %}" class="home">&larr; Return to Home Page</a>
 {% endblock %}
