Updated URL for images on 404 pages.

--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -14,7 +14,7 @@
             <p>Please use the search form to help find the page you were looking for.</p>
             <p>In the meantime, here is a cute picture of a kitten.</p>
             <br>
-            <img src="http://placekitten.com/400/300" />
+            <img src="http://placekitten.com/g/400/300" />
         </div>
         <div class="col-md-4">
             {% include "fragments/search.html" %}
