--- a/twobuntu/accounts/templates/accounts/profile.html
+++ b/twobuntu/accounts/templates/accounts/profile.html
@@ -10,7 +10,7 @@
         <div class="col-sm-8">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="{{ profile.user.email|gravatar:256 }}">
+                    <img src="{{ profile.user.email|gravatar:256 }}" class="img-thumbnail">
                 </div>
                 <div class="col-lg-8">
                     <h2>
