--- a/twobuntu/templates/fragments/messages.html
+++ b/twobuntu/templates/fragments/messages.html
@@ -1,3 +1,10 @@
+{% if READ_ONLY %}
+    <div class="alert alert-warning">
+        <span class="fa fa-lock"></span>
+        2buntu is currently operating in read-only mode.
+        Login and registration have been temporarily disabled.
+    </div>
+{% endif %}
 {% for message in messages %}
     <div class="alert {% if message.tags == "error" %}alert-danger{% else %}alert-info{% endif %}">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
