Updated link for James.

--- a/twobuntu/templates/pages/links.html
+++ b/twobuntu/templates/pages/links.html
@@ -24,7 +24,7 @@
                 <li>
                     <p>
                         James Gifford:<br>
-                        <a href="http://jamesrgifford.com/">http://jamesrgifford.com/</a>
+                        <a href="https://github.com/jrgifford">https://github.com/jrgifford</a>
                     </p>
                 </li>
                 <li>
