Further revisions to the Ubuntu Touch button.

--- a/twobuntu/articles/templates/articles/fragments/apps.html
+++ b/twobuntu/articles/templates/articles/fragments/apps.html
@@ -6,11 +6,11 @@
 </p>
 <br>
 <div class="text-center">
-    <a href="https://play.google.com/store/apps/details?id=com.twobuntu.twobuntu">
+    <a href="https://play.google.com/store/apps/details?id=com.twobuntu.twobuntu" target="_blank">
         <img src="{% static "img/google-play.png" %}"
              title="2buntu for Android">
     </a>
-    <a href="https://appstore.bhdouglass.com/app/com.ubuntu.developer.nathanosman.twobuntu-app">
+    <a href="https://appstore.bhdouglass.com/app/com.ubuntu.developer.nathanosman.twobuntu-app" target="_blank">
         <img src="{% static "img/ubuntu-touch.png" %}"
              title="2buntu for Ubuntu Touch">
     </a>
