--- a/twobuntu/touch/templates/touch/generator.html
+++ b/twobuntu/touch/templates/touch/generator.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col-sm-4 text-center">
-            <img src="{% static "img/touch/mx3-preview.png" %}">
+            <img src="{% static "img/touch/bq-aquaris/preview.jpg" %}">
         </div>
         <div class="col-sm-8">
             <h2>Ubuntu Touch Device Art Generator</h2>
@@ -20,8 +20,7 @@
                 Our server will generate a picture of your app running on an actual Ubuntu phone for you to use wherever you'd like.
             </p>
             <p>
-                <strong>Note:</strong> for best results, use an image that is <strong>1080x1800</strong>.
-                Subract <strong>73 pixels</strong> from the height if you are adding the Unity panel.
+                <strong>Note:</strong> for best results, use the actual dimensions of the phone's screen.
                 Our tool will automatically resize and crop the image if necessary.
             </p>
             <hr>
@@ -29,10 +28,22 @@
                 <div class="col-md-6">
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {% for field in form %}
+                        {% with form.template as field %}
                             {% include "fragments/field.html" %}
-                        {% endfor %}
-                        <br>
+                        {% endwith %}
+                        {% comment %}
+                            {% with form.add_panel as field %}
+                                {% include "fragments/field.html" %}
+                            {% endwith %}
+                        {% endcomment %}
+                        {% with form.glossy_screen as field %}
+                            {% include "fragments/field.html" %}
+                        {% endwith %}
+                        <hr>
+                        {% with form.image as field %}
+                            {% include "fragments/field.html" %}
+                        {% endwith %}
+                        <hr>
                         <button type="submit" class="btn btn-xl btn-primary">
                             <span class="fa fa-cogs"></span>
                             Generate
